chore: update environment variables for API and domain configuration

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_URL_API =  'https://dev.blockscout.hdev99.io.vn/'
+VITE_BASE_URL_API =  'https://dev.blockscout.hdev99.io.vn/'
+VITE_BASE_DOMAIN = 'https://swap.monchain.info'
