--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.2",
+    "@tanstack/vue-query": "^5.66.0",
+    "@wagmi/vue": "^0.1.8",
     "decimal.js": "^10.4.3",
     "nuxt": "^3.12.4",
     "nuxt-lodash": "^2.5.3",
     "nuxt-svgo": "^4.0.11",
     "pinia": "^2.2.0",
+    "viem": "^2.22.19",
     "vue": "^3.4.34",
     "web3": "^4.16.0"
   },
