--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@pinia/nuxt": "^0.5.2",
     "@tanstack/vue-query": "^5.66.0",
     "@wagmi/vue": "^0.1.8",
+    "d3": "^7.9.0",
     "decimal.js": "^10.4.3",
     "nuxt": "^3.12.4",
     "nuxt-lodash": "^2.5.3",
@@ -42,6 +43,7 @@
     "@commitlint/prompt-cli": "^19.3.1",
     "@nuxt/test-utils": "^3.14.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/d3": "^7.4.3",
     "@vitest/ui": "^2.0.5",
     "@vue/test-utils": "^2.4.6",
     "commitizen": "^4.3.0",
