--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nuxthub/core": "^0.8.11",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@pancakeswap/swap-sdk-core": "^1.3.0",
+    "@pancakeswap/v3-sdk": "^3.8.13",
     "@pinia/nuxt": "^0.5.2",
     "@tanstack/vue-query": "^5.66.0",
     "@wagmi/vue": "^0.1.8",
