--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "prepare": "husky",
     "lint-staged": "lint-staged",
     "commit": "git cz",
-    "test": "vitest"
+    "test": "vitest",
+    "build:sdk": "turbo run build --filter=./sdk/* --filter=./sdk/routing-sdk/addons/*"
   },
+  "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "@element-plus/nuxt": "^1.1.1",
     "@metamask/sdk": "^0.31.5",
+    "@monswap/smart-router": "workspace:*",
+    "@monswap/swap-sdk-core": "workspace:*",
+    "@monswap/v3-sdk": "workspace:*",
     "@nuxt/eslint": "^0.4.0",
     "@nuxthub/core": "^0.8.11",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
-    "@monswap/swap-sdk-core": "workspace:*",
-    "@monswap/v3-sdk": "workspace:*",
-    "@monswap/smart-router": "workspace:*",
     "@pinia/nuxt": "^0.5.2",
     "@tanstack/vue-query": "^5.66.0",
     "@wagmi/vue": "^0.1.8",
@@ -57,6 +59,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "sass": "^1.83.4",
+    "turbo": "^2.4.4",
     "vitest": "^2.0.5",
     "wrangler": "^3.103.0"
   },
