--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pancakeswap/swap-sdk-core": "^1.3.0",
     "@pancakeswap/v3-sdk": "^3.8.13",
+    "@pancakeswap/smart-router": "7.0.2",
     "@pinia/nuxt": "^0.5.2",
     "@tanstack/vue-query": "^5.66.0",
     "@vueuse/nuxt": "^12.7.0",
