--- a/package.json
+++ b/package.json
@@ -20,10 +20,27 @@
   "dependencies": {
     "@element-plus/nuxt": "^1.1.1",
     "@metamask/sdk": "^0.31.5",
-    "@monchain/sdk": "^6.1.0",
-    "@monchain/smart-router": "^8.1.0",
-    "@monchain/swap-sdk-core": "^2.0.0",
-    "@monchain/v3-sdk": "^4.1.0",
+    "@monchain/chains": "11.0.0",
+    "@monchain/farms": "11.0.0",
+    "@monchain/gauges": "11.0.0",
+    "@monchain/localization": "11.0.0",
+    "@monchain/multicall": "11.0.0",
+    "@monchain/pcsx-sdk": "11.0.0",
+    "@monchain/permit2-sdk": "11.0.0",
+    "@monchain/pools": "11.0.0",
+    "@monchain/position-managers": "11.0.0",
+    "@monchain/price-api-sdk": "11.0.0",
+    "@monchain/routing-sdk": "11.0.0",
+    "@monchain/sdk": "11.0.0",
+    "@monchain/smart-router": "11.0.0",
+    "@monchain/stable-swap-sdk": "11.0.0",
+    "@monchain/swap-sdk-core": "11.0.0",
+    "@monchain/token-lists": "11.0.0",
+    "@monchain/tokens": "11.0.0",
+    "@monchain/universal-router-sdk": "11.0.0",
+    "@monchain/utils": "11.0.0",
+    "@monchain/v3-sdk": "11.0.0",
+    "@monchain/wagmi": "11.0.0",
     "@nuxt/eslint": "^0.4.0",
     "@nuxthub/core": "^0.8.11",
     "@nuxtjs/google-fonts": "^3.2.0",
@@ -61,6 +78,7 @@
     "sass": "^1.83.4",
     "turbo": "^2.4.4",
     "vitest": "^2.0.5",
+    "webpack-retry-chunk-load-plugin": "^3.1.1",
     "wrangler": "^3.103.0"
   },
   "lint-staged": {
