fix merge conflict

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@wagmi/vue": "^0.1.8",
     "d3": "^7.9.0",
     "decimal.js": "^10.4.3",
-    "nuxt": "^3.12.4",
+    "nuxt": "3.13.0",
     "nuxt-lodash": "^2.5.3",
     "nuxt-svgo": "^4.0.11",
     "pinia": "^2.2.0",
