--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,21 +17,40 @@ jobs:
     steps:
       - name: Checkout
         uses: 'actions/checkout@v4'
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: Clean install dependencies
+        run: |
+          rm -rf node_modules package-lock.json
+          npm ci
+
+      - name: Debug npm install (if failed)
+        if: failure()
+        run: npm install --verbose || true
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           platforms: linux/${{ matrix.architecture }}
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/dex-swap:${{ matrix.architecture }}
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
