--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=2088
 VITE_BASE_URL_API =  'https://dev.blockscout.hdev99.io.vn/'
 VITE_BASE_DOMAIN = 'https://swap.monchain.info'
+VITE_BASE_URL_EXCHANGE_API =  'https://api-price.monchain.info/'
+
