--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tanstack/vue-query": "^5.66.0",
     "@vueuse/nuxt": "^12.7.0",
     "@wagmi/vue": "^0.1.8",
+    "apexcharts": "^4.5.0",
     "axios": "^1.8.1",
     "d3": "^7.9.0",
     "decimal.js": "^10.4.3",
@@ -58,6 +59,7 @@
     "pinia": "^2.2.0",
     "viem": "^2.23.5",
     "vue": "^3.4.34",
+    "vue3-apexcharts": "^1.8.0",
     "web3": "^4.16.0"
   },
   "devDependencies": {
