--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "@wagmi/vue": "^0.1.8",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.1",
+    "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "decimal.js": "^10.4.3",
-    "nuxt": "3.13.0",
+    "jsencrypt": "^3.3.2",
+    "nuxt": "3.15.4",
     "nuxt-lodash": "^2.5.3",
     "nuxt-svgo": "^4.0.11",
     "pinia": "^2.2.0",
@@ -69,6 +71,7 @@
     "@commitlint/prompt-cli": "^19.3.1",
     "@nuxt/test-utils": "^3.14.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/d3": "^7.4.3",
     "@vitest/ui": "^2.0.5",
     "@vue/test-utils": "^2.4.6",
