--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
   "dependencies": {
     "@element-plus/nuxt": "^1.1.1",
     "@metamask/sdk": "^0.31.5",
-    "@monchain/chains": "11.0.3",
-    "@monchain/farms": "11.0.3",
-    "@monchain/gauges": "11.0.3",
-    "@monchain/localization": "11.0.3",
-    "@monchain/multicall": "11.0.3",
-    "@monchain/pcsx-sdk": "11.0.3",
-    "@monchain/permit2-sdk": "11.0.3",
-    "@monchain/pools": "11.0.3",
-    "@monchain/position-managers": "11.0.3",
-    "@monchain/price-api-sdk": "11.0.3",
-    "@monchain/routing-sdk": "11.0.3",
-    "@monchain/sdk": "11.0.3",
-    "@monchain/smart-router": "11.0.3",
-    "@monchain/stable-swap-sdk": "11.0.3",
-    "@monchain/swap-sdk-core": "11.0.3",
-    "@monchain/token-lists": "11.0.3",
-    "@monchain/tokens": "11.0.3",
-    "@monchain/universal-router-sdk": "11.0.3",
-    "@monchain/utils": "11.0.3",
-    "@monchain/v3-sdk": "11.0.3",
-    "@monchain/wagmi": "11.0.3",
+    "@monchain/chains": "11.0.10",
+    "@monchain/farms": "11.0.11",
+    "@monchain/gauges": "11.0.10",
+    "@monchain/localization": "11.0.10",
+    "@monchain/multicall": "11.0.10",
+    "@monchain/pcsx-sdk": "11.0.10",
+    "@monchain/permit2-sdk": "11.0.10",
+    "@monchain/pools": "11.0.10",
+    "@monchain/position-managers": "11.0.10",
+    "@monchain/price-api-sdk": "11.0.11",
+    "@monchain/routing-sdk": "11.0.10",
+    "@monchain/sdk": "11.0.10",
+    "@monchain/smart-router": "11.0.11",
+    "@monchain/stable-swap-sdk": "11.0.10",
+    "@monchain/swap-sdk-core": "11.0.10",
+    "@monchain/token-lists": "11.0.10",
+    "@monchain/tokens": "11.0.10",
+    "@monchain/universal-router-sdk": "11.0.11",
+    "@monchain/utils": "11.0.10",
+    "@monchain/v3-sdk": "11.0.10",
+    "@monchain/wagmi": "11.0.10",
     "@nuxt/eslint": "^0.4.0",
     "@nuxthub/core": "^0.8.11",
     "@nuxtjs/google-fonts": "^3.2.0",
@@ -54,6 +54,7 @@
     "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "decimal.js": "^10.4.3",
+    "graphql-request": "^7.1.2",
     "jsencrypt": "^3.3.2",
     "nuxt": "3.15.4",
     "nuxt-lodash": "^2.5.3",
