feat: implement currency handling with new composables and update token constants

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["encryptor", "MMSDK", "Monchain", "NONFUNGIBLE", "WNATIVE"]
+  "cSpell.words": ["encryptor", "MMSDK", "Monchain", "NONFUNGIBLE", "WMON", "WNATIVE"]
 }
