--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "decimal.js": "^10.4.3",
     "graphql-request": "^7.1.2",
     "jsencrypt": "^3.3.2",
+    "ethers": "^5.8.0",
     "nuxt": "3.15.4",
     "nuxt-lodash": "^2.5.3",
     "nuxt-svgo": "^4.0.11",
