feat: update bridge flow, map with sdk v11.0.13

--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
   "dependencies": {
     "@element-plus/nuxt": "^1.1.1",
     "@metamask/sdk": "^0.31.5",
-    "@monchain/chains": "11.0.10",
-    "@monchain/farms": "11.0.11",
-    "@monchain/gauges": "11.0.10",
-    "@monchain/localization": "11.0.10",
-    "@monchain/multicall": "11.0.10",
-    "@monchain/pcsx-sdk": "11.0.10",
-    "@monchain/permit2-sdk": "11.0.10",
-    "@monchain/pools": "11.0.10",
-    "@monchain/position-managers": "11.0.10",
-    "@monchain/price-api-sdk": "11.0.11",
-    "@monchain/routing-sdk": "11.0.10",
-    "@monchain/sdk": "11.0.10",
-    "@monchain/smart-router": "11.0.11",
-    "@monchain/stable-swap-sdk": "11.0.10",
-    "@monchain/swap-sdk-core": "11.0.10",
-    "@monchain/token-lists": "11.0.10",
-    "@monchain/tokens": "11.0.10",
-    "@monchain/universal-router-sdk": "11.0.11",
-    "@monchain/utils": "11.0.10",
-    "@monchain/v3-sdk": "11.0.10",
-    "@monchain/wagmi": "11.0.10",
+    "@monchain/chains": "11.0.13",
+    "@monchain/farms": "11.0.14",
+    "@monchain/gauges": "11.0.13",
+    "@monchain/localization": "11.0.13",
+    "@monchain/multicall": "11.0.13",
+    "@monchain/pcsx-sdk": "11.0.13",
+    "@monchain/permit2-sdk": "11.0.13",
+    "@monchain/pools": "11.0.13",
+    "@monchain/position-managers": "11.0.13",
+    "@monchain/price-api-sdk": "11.0.14",
+    "@monchain/routing-sdk": "11.0.13",
+    "@monchain/sdk": "11.0.13",
+    "@monchain/smart-router": "11.0.14",
+    "@monchain/stable-swap-sdk": "11.0.13",
+    "@monchain/swap-sdk-core": "11.0.13",
+    "@monchain/token-lists": "11.0.13",
+    "@monchain/tokens": "11.0.13",
+    "@monchain/universal-router-sdk": "11.0.14",
+    "@monchain/utils": "11.0.13",
+    "@monchain/v3-sdk": "11.0.13",
+    "@monchain/wagmi": "11.0.13",
     "@nuxt/eslint": "^0.4.0",
     "@nuxthub/core": "^0.8.11",
     "@nuxtjs/google-fonts": "^3.2.0",
@@ -48,15 +48,16 @@
     "@pinia/nuxt": "^0.5.2",
     "@tanstack/vue-query": "^5.66.0",
     "@vueuse/nuxt": "^12.7.0",
+    "@wagmi/core": "^2.16.7",
     "@wagmi/vue": "^0.1.8",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.1",
     "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "decimal.js": "^10.4.3",
+    "ethers": "^5.8.0",
     "graphql-request": "^7.1.2",
     "jsencrypt": "^3.3.2",
-    "ethers": "^5.8.0",
     "nuxt": "3.15.4",
     "nuxt-lodash": "^2.5.3",
     "nuxt-svgo": "^4.0.11",
@@ -106,5 +107,17 @@
     "commitizen": {
       "path": "@commitlint/cz-commitlint"
     }
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "bufferutil",
+      "esbuild",
+      "keccak",
+      "sharp",
+      "utf-8-validate",
+      "vue-demi",
+      "workerd"
+    ]
   }
 }
