config: wicchain update config

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=2088
 VITE_BASE_DOMAIN = 'https://wicswap.com'
-VITE_BASE_URL_PRICE_API =  'http://66.179.80.121:2087/' # Domain api price
-VITE_BASE_URL_BRIDGE_API =  'http://66.179.80.119:8070/' # Domain api bridge
+VITE_BASE_URL_PRICE_API =  'https://price.wicchain.com/' # Domain api price
+VITE_BASE_URL_BRIDGE_API =  'https://bridge.wicchain.com/' # Domain api bridge
 VITE_BASE_URL_EXPLORER_API =  'https://testnet-api.wicscan.com/api/v2' # Domain api explorer wicchain
 
 # Public key for encrypt data postTransaction to api price
