config: update sdk monchain to wicchain

--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
   "dependencies": {
     "@element-plus/nuxt": "^1.1.1",
     "@metamask/sdk": "^0.31.5",
-    "@monchain/chains": "11.1.2",
-    "@monchain/farms": "11.1.2",
-    "@monchain/gauges": "12.0.2",
-    "@monchain/localization": "11.1.2",
-    "@monchain/multicall": "11.1.2",
-    "@monchain/pcsx-sdk": "11.1.2",
-    "@monchain/permit2-sdk": "11.1.2",
-    "@monchain/pools": "11.1.2",
-    "@monchain/position-managers": "11.1.2",
-    "@monchain/price-api-sdk": "12.0.2",
-    "@monchain/routing-sdk": "11.1.2",
-    "@monchain/sdk": "11.1.2",
-    "@monchain/smart-router": "11.1.2",
-    "@monchain/stable-swap-sdk": "11.1.2",
-    "@monchain/swap-sdk-core": "11.1.2",
-    "@monchain/token-lists": "11.1.2",
-    "@monchain/tokens": "11.1.2",
-    "@monchain/universal-router-sdk": "11.1.2",
-    "@monchain/utils": "12.0.2",
-    "@monchain/v3-sdk": "11.1.2",
-    "@monchain/wagmi": "11.1.2",
+    "@wicchain/chains": "0.0.4",
+    "@wicchain/farms": "0.0.4",
+    "@wicchain/gauges": "0.0.4",
+    "@wicchain/localization": "0.0.4",
+    "@wicchain/multicall": "0.0.4",
+    "@wicchain/pcsx-sdk": "0.0.4",
+    "@wicchain/permit2-sdk": "0.0.4",
+    "@wicchain/pools": "0.0.4",
+    "@wicchain/position-managers": "0.0.4",
+    "@wicchain/price-api-sdk": "0.0.4",
+    "@wicchain/routing-sdk": "0.0.4",
+    "@wicchain/sdk": "0.0.4",
+    "@wicchain/smart-router": "0.0.4",
+    "@wicchain/stable-swap-sdk": "0.0.4",
+    "@wicchain/swap-sdk-core": "0.0.4",
+    "@wicchain/token-lists": "0.0.4",
+    "@wicchain/tokens": "0.0.4",
+    "@wicchain/universal-router-sdk": "0.0.4",
+    "@wicchain/utils": "0.0.4",
+    "@wicchain/v3-sdk": "0.0.4",
+    "@wicchain/wagmi": "0.0.4",
     "@nuxt/eslint": "^0.4.0",
     "@nuxthub/core": "^0.8.11",
     "@nuxtjs/google-fonts": "^3.2.0",
